Changed Package name

--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'com.example.demo'
-    mainClass = 'com.example.demo.HelloApplication'
+    mainModule = 'cmsp.autoqc.visualizer'
+    mainClass = 'cmsp.autoqc.visualizer.AutoQCMain'
 }
 
 javafx {
