--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-group 'com.example'
+group 'cmsp.autoqc'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -16,8 +17,8 @@ ext {
     junitVersion = '5.8.2'
 }
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
+sourceCompatibility = '16'
+targetCompatibility = '16'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -25,15 +26,18 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'cmsp.autoqc.visualizer'
-    mainClass = 'cmsp.autoqc.visualizer.AutoQCMain'
+    mainClass = 'cmsp.autoqc.visualizer.Launcher'
+    applicationName = "AutoQC"
 }
 
 javafx {
     version = '17.0.2'
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 dependencies {
+
+    shadow 'junit:junit:3.8.2'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
@@ -43,14 +47,34 @@ test {
     useJUnitPlatform()
 }
 
+mainClassName = "$moduleName/Launcher"
+
 jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'cmsp.autoqc.visualizer'
     }
 }
 
 jlinkZip {
     group = 'distribution'
+}
+
+task testJar(type: Jar) {
+    manifest {
+        attributes 'Description': 'This is an application JAR'
+    }
+}
+
+shadowJar {
+    archiveBaseName.set('shadow')
+    archiveClassifier.set('')
+    archiveVersion.set('')
+}
+
+jar {
+    manifest {
+        attributes 'Class-Path': '/libs/a.jar'
+    }
 }
