--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'org.gradlex.extra-java-module-info' version '1.0'
 }
 
 group 'cmsp.quickqc'
@@ -35,12 +36,21 @@ javafx {
     modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
+extraJavaModuleInfo {
+    failOnMissingModuleInfo.set(false)
+    module('commons-math3-3.6.1.jar', 'commons.math3', '3.6.1')
+    module('SparseBitSet-1.2.jar', 'SparseBitSet', '1.2')
+}
+
 dependencies {
 
     shadow 'junit:junit:3.8.2'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
 }
 
 test {
